<resources>
    <string name="app_name">VoiceIt</string>

    <!-- String value for Right Upper Actions-->
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>


    <!-- FirebaseURL -->
    <string name="firebaseurl">https://voiceit.firebaseio.com/</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_placeholder">Add description..</string>
    <string name="search_placeholder">Enter User ID</string>
    <string name="add_record_feedback">Record has been added to your list</string>
    <string name="play_while_recording_feedback">Finish your recording first</string>
    <string name="submit_error_feedback">Please pick a file to continue the submission</string>
    <string name="play_record_feedback">Please finish recording before playing</string>
    <string name="missing_input_register">Please fill both username and email fields</string>
    <string name="passwords_match_feedback">Please make sure the password is the same on both fields</string>
    <string name="defaultPostUsername">Angel</string>
    <string name="default_post_timestamp" />
    <string name="default_post_time">10m</string>
    <string name="default_post_like">10</string>
    <string name="default_post_descript">League of legends is a joke and heres</string>
    <string name="delete_prompt">Would you like to delete your post?</string>
    <string name="recording">Recording</string>

    <!--ChangePhotoActivity-->
    <string name="change_photo_title">Change Profile Picture:</string>
    <string name="profile_photo_description">Current Photo:</string>
    <string name="upload_new_photo">Upload New Photo:</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>


</resources>
