<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:padding="16dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/change_photo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/change_photo_title"
        android:textColor="@color/colorPrimary"
        android:textSize="23sp"
        android:textStyle="normal"
        android:layout_gravity="left"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:id="@+id/divider1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/profile_photo_description"
        android:id="@+id/textbox1"
        android:layout_weight="1"
        android:paddingTop="15dp"
        android:textSize="18sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/black_box"
        android:id="@+id/prev_photo"
        android:layout_weight="3" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:id="@+id/divider2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/upload_new_photo"
        android:id="@+id/textbox2"
        android:layout_weight="1"
        android:textSize="18sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center">

        <ImageButton
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:id="@+id/photofromcamera"
            android:src="@drawable/camera" />

        <ImageButton
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:id="@+id/photofromgallery"
            android:src="@drawable/gallery" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            android:id="@+id/button_cancel"
            android:layout_gravity="right"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_save"
            android:id="@+id/button_save"
            android:layout_gravity="right"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>