<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/imageViewPostPicture"
            android:src="@drawable/userdefault"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultPostUsername"
            android:id="@+id/textViewPostUsername"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="3dp"
            android:layout_weight="8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_post_time"
            android:id="@+id/textViewTimestamp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:layout_marginTop="3dp"
            android:gravity="center_vertical|right" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#66d6383a"
        android:layout_margin="0dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:id="@+id/imageViewPostPlay"
            android:src="@drawable/ic_action_play"
            android:layout_margin="0dp"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:id="@+id/imageViewPostLike"
            android:src="@drawable/ic_action_favorite"
            android:layout_margin="0dp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/default_post_like"
            android:id="@+id/textViewPostNumberLikes"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:padding="0dp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:id="@+id/imageViewPostSettings"
            android:src="@drawable/delete"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:tint="#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_post_descript"
            android:id="@+id/textViewPostDescription"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:layout_marginRight="15dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:textAlignment="center" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_gravity="center_horizontal"
        android:background="#000"></RelativeLayout>

</LinearLayout>
